--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 /*------------------------- Layout styles ------------------------*/
 body {
 	margin:0;
-	background:url(../images/bg-body.jpg) no-repeat center top #060606;
+	background:url(../images/back1.jpg) no-repeat center top #000000;
 }
 a {
 	outline:none;
@@ -27,7 +27,7 @@ a img {
 	display:block;
 }
 .page {
-	background:none;
+	background:#000000;
 	width:960px;
 	margin:0 auto;
 }
@@ -93,7 +93,7 @@ a img {
 /*------------------------- Body ---------------------------*/
 .body {
 	border-top:6px solid #a50606;
-	background:url(../images/border2.png) repeat-x left bottom #dcd9d9;
+	background:url(../images/border2.png) repeat-x left bottom #cccccc;
 	margin:-60px 0 0;
 	padding: 18px 0 83px 18px;
 	overflow:hidden;
@@ -115,8 +115,8 @@ a img {
 .body div.content a img {
 }
 .body div.content p {
-	color:#2a2a2a;
-	font-size:12px;
+	color:#000000;
+	font-size:15px;
 	line-height:24px;
 	text-align:justify;
 	margin:31px 0 0;
@@ -140,19 +140,19 @@ a img {
 	font-size:36px;
 }
 .body div.content h3 {
-	color:#a50606;
-	font-size:16px;
+	color:#993300;
+	font-size:23px;
 	line-height:24px;
 	font-family: 'Conv_OpenSans-Regular';
 	margin:0;
-	font-style:italic;
+	font-style:regular script;
 	text-transform:uppercase;
 	font-weight:bold;
 }
 .body div.content p {
-	color:#343434;
-	font-size:12px;
-	line-height:24px;
+	color:#000000;
+	font-size:16px;
+	line-height:20px;
 	margin:27px 0 22px;
 	text-align:left;
 }
@@ -337,20 +337,6 @@ a img {
 	font-style:normal;
 	*width:235px;/* Needed for IE7 */
 }
-.body div form input#submit {
-	background:url(../images/button-send.png) no-repeat;
-	clear: both;
-	display: block;
-	float: left;
-	height: 36px;
-	margin: 29px 0 0 222px;
-	padding: 0;
-	width: 186px;
-	cursor:pointer;
-}
-.body div form input#submit:hover {
-	background:url(../images/button-send-hover.png) no-repeat;
-}
 /*------------------------- Footer -------------------------*/
 .footer {
 	background:url(../images/bg-footer.png) no-repeat;
@@ -394,7 +380,7 @@ a img {
 .footnote {
 	clear: both;
 	color: white;
-	font-size: 15px;
+	font-size: 17px;
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	margin: 0;
 	text-align: center;
