--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 /*------------------------- Layout styles ------------------------*/
 body {
 	margin:0;
-	background:url(../images/back1.jpg) no-repeat center top #000000;
+	background:url(../images/back.jpg) no-repeat center top #000000;
 }
 a {
 	outline:none;
