--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 /*------------------------- Layout styles ------------------------*/
 body {
 	margin:0;
-	background:url(../images/back.jpg) no-repeat center top #000000;
+	background:url(../images/back1.jpg) no-repeat center top #000000;
 }
 a {
 	outline:none;
@@ -32,22 +32,17 @@ a img {
 	margin:0 auto;
 }
 /*------------------------- Header -------------------------*/
-.header {
-	background:url(../images/bg-header.jpg) no-repeat;
-	padding:28px 0 0;
-	position:relative;
-}
-.header a#logo {
+.header a#logo3 {
 	display:block;
-	width:625px;
-	height:87px;
+	width:960px;
+	height:140px;
 	margin:0 auto;
 }
-.header a#logo img {
+.header a#logo3 img {
 }
 .header ul {
 	padding:0;
-	margin:29px 0 0;
+	margin:0px 0 0;
 	list-style:none;
 	overflow:hidden;
 }
@@ -93,7 +88,7 @@ a img {
 /*------------------------- Body ---------------------------*/
 .body {
 	border-top:6px solid #a50606;
-	background:url(../images/border2.png) repeat-x left bottom #cccccc;
+	background:url(../images/border2.png) repeat-x left bottom #DEB887;
 	margin:-60px 0 0;
 	padding: 18px 0 83px 18px;
 	overflow:hidden;
@@ -140,9 +135,9 @@ a img {
 	font-size:36px;
 }
 .body div.content h3 {
-	color:#993300;
-	font-size:23px;
-	line-height:24px;
+	color:#696969;
+	font-size:40px;
+	line-height:14px;
 	font-family: 'Conv_OpenSans-Regular';
 	margin:0;
 	font-style:regular script;
@@ -150,9 +145,9 @@ a img {
 	font-weight:bold;
 }
 .body div.content p {
-	color:#000000;
-	font-size:16px;
-	line-height:20px;
+	color:#A52A2A;
+	font-size:30px;
+	line-height:40px;
 	margin:27px 0 22px;
 	text-align:left;
 }
